chore: Remove personal domain from documentation and replace with generic placeholders
- Replace "panel.mikael.my" with "your-domain.com" in all documentation
- Update index.html title and author to generic values
- Update NGINX_SETUP.md CORS and Cloudflare examples
- Update README.md curl examples and URLs
- Update GITHUB_PUBLISH.md references
- Prepare repository for public GitHub publication without exposing private domain

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ubuntu Server Management Dashboard - Monitor and manage your Ubuntu server">
-    <meta name="author" content="Mikael">
-    <title>Server Panel - panel.mikael.my</title>
+    <meta name="author" content="Server Admin">
+    <title>Ubuntu Server Management Panel</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
